# profiles

./: .gitignore  Cargo.toml
assets/: animals.txt  nouns.txt
src/: components.rs  credentials.rs  events.rs  lib.rs  list_item.rs  pages.rs  plugin.rs  service.rs
src/components/: avatar.rs  button.rs  credentials.rs  data_item.rs  list_item.rs  text_input.rs
src/pages/: accounts.rs  pairing.rs
