[package]
name = "profiles"
version = "0.1.1"
edition = "2024"

[dependencies]
log = "0.4.27"
maverick_os = {path = "../maverick_os" }
#maverick_os = "0.1.1"

pelican_ui = {path = "../pelican_ui" }
pelican_ui_std = {path = "../pelican_ui_std" }
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
image = "0.25.6"
uuid = { version = "1.17.0", features = ["v4"] }
