[package]
name = "profiles"
version = "0.1.3"
edition = "2024"
authors = ["Ella Mae <ellaammae@email.com>"]
description = "A Rust crate built on RAMP that provides all the tools to configure AIR profiles."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/profiles"
documentation = "https://docs.rs/profiles"

[dependencies]
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
image = "0.25.6"
uuid = { version = "1.17.0", features = ["v4", "js"] }
pelican_ui = "1.1.4"
pelican_ui_std = "0.2.5"